--- a/docs/docs-ref-autogen/outlook_1_8/outlook/office.sharedproperties.yml
+++ b/docs/docs-ref-autogen/outlook_1_8/outlook/office.sharedproperties.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       表示共享文件夹、邮箱或日历中的约会或邮件的属性。
 
-      有关如何使用此对象的详细信息，请参阅[代理访问](https://docs.microsoft.com/office/dev/add-ins/outlook/delegate-access)文章。
+      有关如何使用此对象的详细信息，请参阅 [代理访问](https://docs.microsoft.com/office/dev/add-ins/outlook/delegate-access) 文章。
 
       \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
@@ -48,9 +48,11 @@ items:
           - string
   - uid: 'outlook!Office.SharedProperties#targetMailbox:member'
     summary: |-
-      目标/所有者的邮箱。 使用 with `targetRestUrl` 来构造 REST 操作的 URL。
+      所有者的代理访问邮箱的位置。 根据 Outlook 客户端的不同，此位置可能有所不同。
 
-      示例用法：`targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
+      使用 with `targetRestUrl` 来构造 REST 操作的 URL。
+
+      示例用法： `targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
     name: targetMailbox
     fullName: targetMailbox
     langs:
@@ -63,9 +65,11 @@ items:
           - string
   - uid: 'outlook!Office.SharedProperties#targetRestUrl:member'
     summary: |-
-      REST API 的基 URL （当前为 https://outlook.office.com/api) 。 使用 with `targetMailbox` 来构造 REST 操作的 URL。
+      REST API 的基本 URL (当前 https://outlook.office.com/api) 。
 
-      示例用法：`targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
+      使用 with `targetMailbox` 来构造 REST 操作的 URL。
+
+      示例用法： `targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
     name: targetRestUrl
     fullName: targetRestUrl
     langs:
