commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.context.yml
+++ b/docs/docs-ref-autogen/office/office/office.context.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.Context:interface'
-    summary: 表示外接程序的运行时环境，并提供对 API 的关键对象的访问。 当前上下文作为 Office 的属性存在。 可使用`Office.context`<!-- -->.
+    summary: 表示外接程序的运行时环境，并提供对 API 的关键对象的访问。 当前上下文作为 Office 的属性存在。 可使用 `Office.context`<!-- -->.
     remarks: '**主机**： Excel、Outlook、PowerPoint、Project、Word'
     name: Office.Context
     fullName: Office.Context
@@ -43,7 +43,7 @@ items:
     remarks: |-
       **主机**： Excel、Word
 
-      `commerceAllowed`仅在 iPad 上的 Office 中才受支持。
+      `commerceAllowed` 仅在 iPad 上的 Office 中才受支持。
 
       iOS 应用商店不支持提供其他付款系统的链接的应用程序和外接程序。 但是，在 Windows 桌面上或浏览器中运行在 Office 中的 Office 加载项确实允许这样的链接。 如果您希望外接程序的 UI 在非 iOS 平台上提供到外部付款系统的链接，则可以使用 commerceAllowed 属性来控制该链接的显示时间。
     name: commerceAllowed
@@ -65,9 +65,9 @@ items:
 
       下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此属性。 空的单元格表示相应的 Office 主机应用程序不支持此枚举。
 
-      有关 Office 主机应用程序和服务器要求的详细信息，请参阅[运行 Office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
+      有关 Office 主机应用程序和服务器要求的详细信息，请参阅 [运行 Office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
 
-      *支持的主机（按平台）* <table> <tr><th> </th><th> Windows 版 Office </th><th> Web 浏览器中的 Office </th><th> iPad 版 Office </th><th> 移动设备上的 Outlook </th><th> Mac 版 Office </th></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> </table>
+      *支持的主机（按平台）* <table> <tr><th> </th><th> Windows 版 Office </th><th> Web 浏览器中的 Office </th><th> iPad 版 Office </th><th> 移动设备上的 Outlook </th><th> Mac 版 Office </th></tr> <tr><td><strong> Excel </strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong> Outlook </strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong> PowerPoint </strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> <tr><td><strong> 项目 </strong></td><td> Y </td><td> </td><td> </td><td> </td><td> </td></tr> <tr><td><strong> Word </strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> </td></tr> </table>
 
       #### <a name="examples"></a>示例
 
@@ -110,6 +110,17 @@ items:
       return:
         type:
           - 'office!Office.ContextInformation:interface'
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```javascript
+          var contextInfo = Office.context.diagnostics;
+          console.log("Office application: " + contextInfo.host);
+          console.log("Office version: " + contextInfo.version);
+          console.log("Platform: " + contextInfo.platform);
+          ```
   - uid: 'office!Office.Context#displayLanguage:member'
     summary: 获取用户针对 Office 主机应用程序的 UI 指定的区域设置（语言）。
     remarks: |-
@@ -123,9 +134,9 @@ items:
 
       下列矩阵中的大写字母 Y 表示相应的 Office 主机应用程序支持此属性。 空的单元格表示相应的 Office 主机应用程序不支持此枚举。
 
-      有关 Office 主机应用程序和服务器要求的详细信息，请参阅[运行 Office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
+      有关 Office 主机应用程序和服务器要求的详细信息，请参阅 [运行 Office 加载项的要求](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.
 
-      *支持的主机（按平台）* <table> <tr><th> </th><th> Windows 版 Office </th><th> Web 浏览器中的 Office </th><th> iPad 版 Office </th><th> 移动设备上的 Outlook </th><th> Mac 版 Office </th></tr> <tr><td><strong>Excel</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> Y </td></tr> <tr><td><strong>Outlook</strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong>PowerPoint</strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> Y </td></tr> <tr><td><strong>项目</strong></td><td> Y </td><td> </td><td> </td><td> </td><td> Y </td></tr> <tr><td><strong>Word</strong></td><td> Y </td><td> </td><td> Y </td><td> </td><td> Y </td></tr> </table>
+      *支持的主机（按平台）* <table> <tr><th> </th><th> Windows 版 Office </th><th> Web 浏览器中的 Office </th><th> iPad 版 Office </th><th> 移动设备上的 Outlook </th><th> Mac 版 Office </th></tr> <tr><td><strong> Excel </strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> Y </td></tr> <tr><td><strong> Outlook </strong></td><td> Y </td><td> Y </td><td> </td><td> Y </td><td> Y </td></tr> <tr><td><strong> PowerPoint </strong></td><td> Y </td><td> Y </td><td> Y </td><td> </td><td> Y </td></tr> <tr><td><strong> 项目 </strong></td><td> Y </td><td> </td><td> </td><td> </td><td> Y </td></tr> <tr><td><strong> Word </strong></td><td> Y </td><td> </td><td> Y </td><td> </td><td> Y </td></tr> </table>
 
       #### <a name="examples"></a>示例
 
@@ -330,7 +341,7 @@ items:
     remarks: |-
       **主机**： Excel、PowerPoint、Word
 
-      `touchEnabled`仅在 iPad 上的 Office 中才受支持。
+      `touchEnabled` 仅在 iPad 上的 Office 中才受支持。
 
       使用 Context.touchenabled 属性可确定外接程序何时在触摸设备上运行，并在必要时调整控件的种类，以及外接程序 UI 中的元素的大小和间距，以适应触摸交互。
     name: touchEnabled
