--- a/docs/docs-ref-autogen/office/office/office.contextinformation.yml
+++ b/docs/docs-ref-autogen/office/office/office.contextinformation.yml
@@ -24,6 +24,15 @@ items:
       return:
         type:
           - 'office!Office.HostType:enum'
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```javascript
+          var contextInfo = Office.context.diagnostics;
+          console.log("Office application: " + contextInfo.host);
+          ```
   - uid: 'office!Office.ContextInformation#platform:member'
     summary: 获取在其上运行外接的平台。
     name: platform
@@ -36,6 +45,15 @@ items:
       return:
         type:
           - 'office!Office.PlatformType:enum'
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```javascript
+          var contextInfo = Office.context.diagnostics;
+          console.log("Platform: " + contextInfo.platform);
+          ```
   - uid: 'office!Office.ContextInformation#version:member'
     summary: 获取在其上运行外接的 Office 的版本。
     name: version
@@ -48,6 +66,15 @@ items:
       return:
         type:
           - string
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```javascript
+          var contextInfo = Office.context.diagnostics;
+          console.log("Office version: " + contextInfo.version);
+          ```
 references:
   - uid: 'office!Office.HostType:enum'
     name: Office.HostType
