--- a/docs/docs-ref-autogen/office/office/office.removehandleroptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.removehandleroptions.yml
@@ -24,7 +24,7 @@ items:
         type:
           - any
   - uid: 'office!Office.RemoveHandlerOptions#handler:member'
-    summary: 要删除的处理程序。 如果未指定，则删除指定事件类型的所有处理程序。
+    summary: '要删除的处理程序。 如果未指定特定处理程序，则将删除指定事件类型的所有处理程序。 `BindingEventHandler`类型定义方式为`type BindingEventHandler = (eventArgs?: Office.BindingDataChangedEventArgs | Office.BindingSelectionChangedEventArgs) => any`<!-- -->.'
     name: handler
     fullName: handler
     langs:
