commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.range.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.range.yml
@@ -1416,8 +1416,7 @@ items:
     summary: |-
       返回一个 `RangeAreas` 对象，表示此范围中的合并区域。 请注意，如果此范围中的合并区域计数超过512，API 将无法返回结果。
 
-      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getMergedAreas()
     fullName: getMergedAreas()
     langs:
