--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.commentdeletedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.commentdeletedeventargs.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'excel!Excel.CommentDeletedEventArgs:interface'
     summary: |-
-      提供有关引发已删除事件的注释 (s) 的信息。
+      提供有关引发了已删除事件的注释的信息。
 
       \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CommentDeletedEventArgs
