--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotlayoutupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotlayoutupdatedata.yml
@@ -140,6 +140,7 @@ items:
       应用于数据透视表的样式。
 
       \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
     name: pivotStyle
     fullName: pivotStyle
     langs:
