--- a/docs/docs-ref-autogen/excel_online/excel/excel.commentaddedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.commentaddedeventargs.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'excel!Excel.CommentAddedEventArgs:interface'
     summary: |-
-      提供有关引发添加的事件的注释 (s) 的信息。
+      提供有关引发添加的事件的注释的信息。
 
       \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CommentAddedEventArgs
