--- a/docs/docs-ref-autogen/office/office/office.dialog.yml
+++ b/docs/docs-ref-autogen/office/office/office.dialog.yml
@@ -56,7 +56,7 @@ items:
         description: ''
   - uid: 'office!Office.Dialog#messageChild:member(1)'
     summary: 将来自主机页（如任务窗格或无 UI 的函数文件）的消息传递到从页面打开的对话框。
-    remarks: '**要求集**： TBD'
+    remarks: '**要求集**： DialogAPI 1。2'
     name: messageChild(message)
     fullName: messageChild(message)
     langs:
