--- a/docs/docs-ref-autogen/office/office/office.dialog.yml
+++ b/docs/docs-ref-autogen/office/office/office.dialog.yml
@@ -56,7 +56,14 @@ items:
         description: ''
   - uid: 'office!Office.Dialog#messageChild:member(1)'
     summary: 将来自主机页（如任务窗格或无 UI 的函数文件）的消息传递到从页面打开的对话框。
-    remarks: '**要求集**： DialogAPI 1。2'
+    remarks: |-
+      **主机**： Excel、Outlook (最低要求集：邮箱 1.9) 、PowerPoint、Word
+
+      **要求集**：
+
+      - [DialogAPI 1。2](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/dialog-api-requirement-sets)
+
+      - [Mailbox 1.9](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)
     name: messageChild(message)
     fullName: messageChild(message)
     langs:
