--- a/docs/docs-ref-autogen/office/office/office.ui.yml
+++ b/docs/docs-ref-autogen/office/office/office.ui.yml
@@ -21,10 +21,9 @@ items:
   - uid: 'office!Office.UI#addHandlerAsync:member(1)'
     summary: 使用指定的事件类型将事件处理程序添加到对象。
     remarks: |-
-      **要求集**： DialogAPI 1。2
+      **要求集**： [DialogAPI 1.2](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/dialog-api-requirement-sets)
 
       只要每个事件处理程序函数的名称是唯一的，您就可以为指定的事件类型添加多个事件处理程序。
-    isPreview: true
     name: 'addHandlerAsync(eventType, handler, options, callback)'
     fullName: 'addHandlerAsync(eventType, handler, options, callback)'
     langs:
@@ -56,9 +55,13 @@ items:
   - uid: 'office!Office.UI#closeContainer:member(1)'
     summary: 关闭正在执行 JavaScript 的 UI 容器。
     remarks: |-
-      **主机**： Excel、Word、PowerPoint、Outlook (最低要求集：邮箱 1.5) 
+      **主机**： Excel、Outlook (最低要求集：邮箱 1.5) 、PowerPoint、Word
 
-      **要求集**： [DialogAPI](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/dialog-api-requirement-sets)
+      **要求集**：
+
+      - [DialogAPI](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/dialog-api-requirement-sets)
+
+      - [Mailbox 1.5](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)
 
       此方法的行为由以下内容指定：
 
@@ -81,7 +84,7 @@ items:
   - uid: 'office!Office.UI#displayDialogAsync:member(1)'
     summary: 显示用于显示或收集用户信息或便于 Web 导航的对话框。
     remarks: |-
-      **主机**： Word、Excel、Outlook、PowerPoint
+      **主机**： Excel、Outlook、PowerPoint、Word
 
       **要求集**：
 
@@ -89,7 +92,7 @@ items:
 
       - [Mailbox 1.4](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)
 
-      此方法适用于 Word、Excel 或 PowerPoint 加载项的 DialogApi 要求集，以及邮箱要求集 1.4 for Outlook。 有关如何在清单中指定要求集的详细信息，请参阅 [指定 Office 主机和 API 要求](https://docs.microsoft.com/office/dev/add-ins/develop/specify-office-hosts-and-api-requirements)<!-- -->.
+      此方法适用于 Excel、PowerPoint 或 Word 加载项的 DialogApi 要求集，以及邮箱要求集 1.4 for Outlook。 有关如何在清单中指定要求集的详细信息，请参阅 [指定 Office 主机和 API 要求](https://docs.microsoft.com/office/dev/add-ins/develop/specify-office-hosts-and-api-requirements)<!-- -->.
 
       初始页必须与父页位于同一域中 (startAddress 参数) 。 初始网页加载后，你可以转到其他域。
 
@@ -159,7 +162,7 @@ items:
 
       - [Mailbox 1.4](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)
 
-      此方法适用于 Word、Excel 或 PowerPoint 加载项的 DialogApi 要求集，以及邮箱要求集 1.4 for Outlook。 有关如何在清单中指定要求集的详细信息，请参阅 [指定 Office 主机和 API 要求](https://docs.microsoft.com/office/dev/add-ins/develop/specify-office-hosts-and-api-requirements)<!-- -->.
+      此方法适用于 Excel、PowerPoint 或 Word 加载项的 DialogApi 要求集，以及邮箱要求集 1.4 for Outlook。 有关如何在清单中指定要求集的详细信息，请参阅 [指定 Office 主机和 API 要求](https://docs.microsoft.com/office/dev/add-ins/develop/specify-office-hosts-and-api-requirements)<!-- -->.
 
       初始页必须与父页位于同一域中 (startAddress 参数) 。 初始网页加载后，你可以转到其他域。
 
