commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotlayoutdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotlayoutdata.yml
@@ -139,7 +139,8 @@ items:
     summary: |-
       应用于数据透视表的样式。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
     name: pivotStyle
     fullName: pivotStyle
     langs:
