commit translated contents

--- a/docs/docs-ref-autogen/visio/toc.yml
+++ b/docs/docs-ref-autogen/visio/toc.yml
@@ -23,13 +23,13 @@ items:
             uid: 'visio!Visio.Application:class'
           - name: BoundingBox
             uid: 'visio!Visio.BoundingBox:interface'
-          - name: 评论
+          - name: Comment
             uid: 'visio!Visio.Comment:class'
           - name: CommentCollection
             uid: 'visio!Visio.CommentCollection:class'
           - name: DataRefreshCompleteEventArgs
             uid: 'visio!Visio.DataRefreshCompleteEventArgs:interface'
-          - name: Document
+          - name: 文档
             uid: 'visio!Visio.Document:class'
           - name: DocumentLoadCompleteEventArgs
             uid: 'visio!Visio.DocumentLoadCompleteEventArgs:interface'
@@ -41,7 +41,7 @@ items:
             uid: 'visio!Visio.Hyperlink:class'
           - name: HyperlinkCollection
             uid: 'visio!Visio.HyperlinkCollection:class'
-          - name: Page
+          - name: 页面
             uid: 'visio!Visio.Page:class'
           - name: PageCollection
             uid: 'visio!Visio.PageCollection:class'
@@ -55,11 +55,11 @@ items:
             uid: 'visio!Visio.Position:interface'
           - name: RequestContext
             uid: 'visio!Visio.RequestContext:class'
-          - name: Selection
+          - name: 选择
             uid: 'visio!Visio.Selection:class'
           - name: SelectionChangedEventArgs
             uid: 'visio!Visio.SelectionChangedEventArgs:interface'
-          - name: 型号
+          - name: Shape
             uid: 'visio!Visio.Shape:class'
           - name: ShapeCollection
             uid: 'visio!Visio.ShapeCollection:class'
