--- a/docs/docs-ref-autogen/onenote/toc.yml
+++ b/docs/docs-ref-autogen/onenote/toc.yml
@@ -19,7 +19,7 @@ items:
                 uid: 'onenote!OneNote.NoteTagStatus:enum'
               - name: NoteTagType
                 uid: 'onenote!OneNote.NoteTagType:enum'
-              - name: 在内
+              - name: NumberType
                 uid: 'onenote!OneNote.NumberType:enum'
               - name: PageContentType
                 uid: 'onenote!OneNote.PageContentType:enum'
@@ -57,7 +57,7 @@ items:
             uid: 'onenote!OneNote.InkWord:class'
           - name: InkWordCollection
             uid: 'onenote!OneNote.InkWordCollection:class'
-          - name: Notebook
+          - name: 笔记本
             uid: 'onenote!OneNote.Notebook:class'
           - name: NotebookCollection
             uid: 'onenote!OneNote.NotebookCollection:class'
@@ -65,15 +65,15 @@ items:
             uid: 'onenote!OneNote.NoteTag:class'
           - name: 大纲
             uid: 'onenote!OneNote.Outline:class'
-          - name: Page
+          - name: 页面
             uid: 'onenote!OneNote.Page:class'
           - name: PageCollection
             uid: 'onenote!OneNote.PageCollection:class'
-          - name: PageContent
+          - name: 页面内容
             uid: 'onenote!OneNote.PageContent:class'
           - name: PageContentCollection
             uid: 'onenote!OneNote.PageContentCollection:class'
-          - name: Paragraph
+          - name: 段落
             uid: 'onenote!OneNote.Paragraph:class'
           - name: ParagraphCollection
             uid: 'onenote!OneNote.ParagraphCollection:class'
@@ -83,15 +83,15 @@ items:
             uid: 'onenote!OneNote.RequestContext:class'
           - name: RichText
             uid: 'onenote!OneNote.RichText:class'
-          - name: 分区
+          - name: 节
             uid: 'onenote!OneNote.Section:class'
           - name: SectionCollection
             uid: 'onenote!OneNote.SectionCollection:class'
-          - name: 分区组
+          - name: SectionGroup
             uid: 'onenote!OneNote.SectionGroup:class'
           - name: SectionGroupCollection
             uid: 'onenote!OneNote.SectionGroupCollection:class'
-          - name: Table
+          - name: 表格
             uid: 'onenote!OneNote.Table:class'
           - name: TableCell
             uid: 'onenote!OneNote.TableCell:class'
@@ -149,7 +149,7 @@ items:
                     uid: 'office!Office.SelectionMode:enum'
                   - name: StartupBehavior
                     uid: 'office!Office.StartupBehavior:enum'
-                  - name: Table
+                  - name: 表格
                     uid: 'office!Office.Table:enum'
                   - name: ValueFormat
                     uid: 'office!Office.ValueFormat:enum'
@@ -163,9 +163,9 @@ items:
                 uid: 'office!Office.AddBindingFromPromptOptions:interface'
               - name: AddBindingFromSelectionOptions
                 uid: 'office!Office.AddBindingFromSelectionOptions:interface'
-              - name: 接
+              - name: 外接程序
                 uid: 'office!Office.Addin:interface'
-              - name: Addincommand
+              - name: AddinCommands
                 items:
                   - name: 事件
                     uid: 'office!Office.AddinCommands.Event:interface'
@@ -177,7 +177,7 @@ items:
                 uid: 'office!Office.AsyncContextOptions:interface'
               - name: AsyncResult
                 uid: 'office!Office.AsyncResult:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office!Office.Auth:interface'
               - name: AuthOptions
                 uid: 'office!Office.AuthOptions:interface'
@@ -185,7 +185,7 @@ items:
                 uid: 'office!Office.Binding:interface'
               - name: BindingDataChangedEventArgs
                 uid: 'office!Office.BindingDataChangedEventArgs:interface'
-              - name: Bindings
+              - name: 绑定
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
@@ -193,7 +193,7 @@ items:
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
-              - name: 控制
+              - name: 控件
                 uid: 'office!Office.Control:interface'
               - name: CustomXmlNode
                 uid: 'office!Office.CustomXmlNode:interface'
@@ -261,9 +261,9 @@ items:
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
-              - name: Slice
+              - name: 切片
                 uid: 'office!Office.Slice:interface'
-              - name: Tab
+              - name: 选项卡
                 uid: 'office!Office.Tab:interface'
               - name: TableBinding
                 uid: 'office!Office.TableBinding:interface'
@@ -275,7 +275,7 @@ items:
                 uid: 'office!Office.UI:interface'
               - name: VisibilityModeChangedMessage
                 uid: 'office!Office.VisibilityModeChangedMessage:interface'
-          - name: Officeextension.error
+          - name: OfficeExtension
             items:
               - name: ClientObject
                 uid: 'office!OfficeExtension.ClientObject:class'
@@ -316,7 +316,7 @@ items:
             items:
               - name: ApiInformation
                 uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
@@ -324,5 +324,5 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 存储
+              - name: 存储空间
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
