--- a/docs/docs-ref-autogen/outlook_1_5/toc.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/toc.yml
@@ -22,7 +22,7 @@ items:
                 uid: 'outlook!Office.MailboxEnums.RecipientType:enum'
               - name: ResponseType
                 uid: 'outlook!Office.MailboxEnums.ResponseType:enum'
-              - name: Office.mailboxenums.restversion
+              - name: RestVersion
                 uid: 'outlook!Office.MailboxEnums.RestVersion:enum'
               - name: SourceProperty
                 uid: 'outlook!Office.MailboxEnums.SourceProperty:enum'
@@ -32,15 +32,15 @@ items:
             uid: 'outlook!Office.AppointmentRead:interface'
           - name: AttachmentDetails
             uid: 'outlook!Office.AttachmentDetails:interface'
-          - name: Body
+          - name: 正文
             uid: 'outlook!Office.Body:interface'
           - name: CoercionTypeOptions
             uid: 'outlook!Office.CoercionTypeOptions:interface'
-          - name: Contact
+          - name: 联系人
             uid: 'outlook!Office.Contact:interface'
           - name: CustomProperties
             uid: 'outlook!Office.CustomProperties:interface'
-          - name: Diagnostics
+          - name: 诊断
             uid: 'outlook!Office.Diagnostics:interface'
           - name: EmailAddressDetails
             uid: 'outlook!Office.EmailAddressDetails:interface'
@@ -48,7 +48,7 @@ items:
             uid: 'outlook!Office.EmailUser:interface'
           - name: 实体
             uid: 'outlook!Office.Entities:interface'
-          - name: Item
+          - name: 项目
             uid: 'outlook!Office.Item:interface'
           - name: LocalClientTime
             uid: 'outlook!Office.LocalClientTime:interface'
@@ -60,7 +60,7 @@ items:
             uid: 'outlook!Office.MeetingSuggestion:interface'
           - name: MessageCompose
             uid: 'outlook!Office.MessageCompose:interface'
-          - name: Messageread.html
+          - name: MessageRead
             uid: 'outlook!Office.MessageRead:interface'
           - name: NotificationMessageDetails
             uid: 'outlook!Office.NotificationMessageDetails:interface'
@@ -80,7 +80,7 @@ items:
             uid: 'outlook!Office.Subject:interface'
           - name: TaskSuggestion
             uid: 'outlook!Office.TaskSuggestion:interface'
-          - name: Time
+          - name: 时间
             uid: 'outlook!Office.Time:interface'
           - name: UserProfile
             uid: 'outlook!Office.UserProfile:interface'
@@ -132,7 +132,7 @@ items:
                     uid: 'office!Office.SelectionMode:enum'
                   - name: StartupBehavior
                     uid: 'office!Office.StartupBehavior:enum'
-                  - name: Table
+                  - name: 表格
                     uid: 'office!Office.Table:enum'
                   - name: ValueFormat
                     uid: 'office!Office.ValueFormat:enum'
@@ -146,9 +146,9 @@ items:
                 uid: 'office!Office.AddBindingFromPromptOptions:interface'
               - name: AddBindingFromSelectionOptions
                 uid: 'office!Office.AddBindingFromSelectionOptions:interface'
-              - name: 接
+              - name: 外接程序
                 uid: 'office!Office.Addin:interface'
-              - name: Addincommand
+              - name: AddinCommands
                 items:
                   - name: 事件
                     uid: 'office!Office.AddinCommands.Event:interface'
@@ -160,7 +160,7 @@ items:
                 uid: 'office!Office.AsyncContextOptions:interface'
               - name: AsyncResult
                 uid: 'office!Office.AsyncResult:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office!Office.Auth:interface'
               - name: AuthOptions
                 uid: 'office!Office.AuthOptions:interface'
@@ -168,7 +168,7 @@ items:
                 uid: 'office!Office.Binding:interface'
               - name: BindingDataChangedEventArgs
                 uid: 'office!Office.BindingDataChangedEventArgs:interface'
-              - name: Bindings
+              - name: 绑定
                 uid: 'office!Office.Bindings:interface'
               - name: BindingSelectionChangedEventArgs
                 uid: 'office!Office.BindingSelectionChangedEventArgs:interface'
@@ -176,7 +176,7 @@ items:
                 uid: 'office!Office.Context:interface'
               - name: ContextInformation
                 uid: 'office!Office.ContextInformation:interface'
-              - name: 控制
+              - name: 控件
                 uid: 'office!Office.Control:interface'
               - name: CustomXmlNode
                 uid: 'office!Office.CustomXmlNode:interface'
@@ -244,9 +244,9 @@ items:
                 uid: 'office!Office.Settings:interface'
               - name: SettingsChangedEventArgs
                 uid: 'office!Office.SettingsChangedEventArgs:interface'
-              - name: Slice
+              - name: 切片
                 uid: 'office!Office.Slice:interface'
-              - name: Tab
+              - name: 选项卡
                 uid: 'office!Office.Tab:interface'
               - name: TableBinding
                 uid: 'office!Office.TableBinding:interface'
@@ -258,7 +258,7 @@ items:
                 uid: 'office!Office.UI:interface'
               - name: VisibilityModeChangedMessage
                 uid: 'office!Office.VisibilityModeChangedMessage:interface'
-          - name: Officeextension.error
+          - name: OfficeExtension
             items:
               - name: ClientObject
                 uid: 'office!OfficeExtension.ClientObject:class'
@@ -299,7 +299,7 @@ items:
             items:
               - name: ApiInformation
                 uid: 'office-runtime!OfficeRuntime.ApiInformation:interface'
-              - name: Auth
+              - name: 身份验证
                 uid: 'office-runtime!OfficeRuntime.Auth:interface'
               - name: AuthOptions
                 uid: 'office-runtime!OfficeRuntime.AuthOptions:interface'
@@ -307,5 +307,5 @@ items:
                 uid: 'office-runtime!OfficeRuntime.Dialog:interface'
               - name: DisplayWebDialogOptions
                 uid: 'office-runtime!OfficeRuntime.DisplayWebDialogOptions:interface'
-              - name: 存储
+              - name: 存储空间
                 uid: 'office-runtime!OfficeRuntime.Storage:interface'
